arcbd.org #002 | Top Header Added
Added top header

--- a/index.html
+++ b/index.html
@@ -32,7 +32,44 @@
             <div class="top-header">
                 <div class="container">
                     <div class="row">
-                        
+                        <!-- Top bar contents -->
+                        <div class="topbar-contents clearfix">
+                            <!-- Social Icons -->
+                            <div class="col-md-3 col-sm-5">
+                                <div class="topbar-social-icons">
+                                    <p>
+                                        Contact with us:
+                                        <a href="#"><i class="fa fa-facebook"></i></a>
+                                        <a href="#"><i class="fa fa-twitter"></i></a>
+                                        <a href="#"><i class="fa fa-google-plus"></i></a>
+                                        <a href="#"><i class="fa fa-instagram"></i></a>
+                                        <a href="#"><i class="fa fa-youtube"></i></a>
+                                    </p>
+                                    
+                                </div>
+                            </div>
+                            <!-- Social Icons Ends -->
+
+                            <!-- topbar links -->
+                            <div class="col-md-5 col-sm-6 col-md-offset-4 col-sm-offset-1">
+                                <div class="topbar-links">
+                                    <ul>
+                                        <li><a href="#">Login</a> | </li>
+                                        <li><a href="#">register</a> | </li>
+                                        <li>
+                                            <a href="#">
+                                                <select name="language" id="lang">
+                                                    <option value="eng">English</option>
+                                                    <option value="bn">Bangla</option>
+                                                </select>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <!-- topbar links ends -->
+                        </div>
+                        <!-- Top bar contents Ends -->
                     </div>
                 </div>
             </div>
