--- a/index.html
+++ b/index.html
@@ -75,6 +75,106 @@
             </div>
             <!-- Top Header Ends -->
 
+            <!-- Bottom Header -->
+            <div class="bottom-header">
+                <div class="container">
+                    <div class="row">
+                        <!-- Logo -->
+                        <div class="col-md-3 col-sm-3">
+                            <div class="logo">
+                                <a href="#">
+                                    <img src="assets/images/logo.png" class="img-responsive" alt="Logo">
+                                </a>
+                            </div>
+                        </div>
+                        <!-- Logo ends -->
+
+                        <!-- Menu and CTA -->
+                        <div class="col-md-offset-1 col-md-8 col-sm-8 col-sm-offset-1">
+                            <div class="row">
+                                <!-- header cta -->
+                                <div class="header-cta">
+                                   <!-- Single Cta -->
+                                   <div class="col-md-4 header-single-cta">
+                                       <p>
+                                           <span>Call us: </span>+8801612121212,
+                                                                 +8801621212121
+                                       </p>
+                                       <p>
+                                           <span>Timings: </span>Mon to Friday, 9am to 7pm
+                                       </p>
+                                   </div>
+                                   <!-- Single Cta ends -->
+                                   <!-- Single Cta -->
+                                   <div class="col-md-4 header-single-cta">
+                                        <p>
+                                            <span>For Inquiry: </span>info@arcbd.com
+                                        </p>
+                                        <p>
+                                            <span>Address: </span>Building name, Street                                                                    Kawranbazaar, Dhaka 1310
+                                        </p>
+                                    </div>
+                                    <!-- Single Cta ends -->
+                                    <!-- single cta -->
+                                    <div class="col-md-4 header-single-cta">
+                                        <a href="#" class="btn btn-common btn-orange">Book appointment</a>
+                                    </div>
+                                    <!-- single cta ends -->
+                                </div>
+                                <!-- header cta ends -->
+
+                                <!-- main navigation -->
+                                <div class="main-navigation">
+                                    <div class="col-md-12">
+                                        <nav class="navigation">
+                                            <ul class=" hidden-sm hidden-xs">
+                                                <li><a href="#">Home</a></li>
+                                                <li>
+                                                    <a href="#">Services</a>
+                                                    <ul>
+                                                        <li><a href="#">Service 1</a></li>
+                                                        <li>
+                                                            <a href="#">Service 2</a>
+                                                            <ul>
+                                                                <li><a href="#">Sub service 1</a></li>
+                                                                <li><a href="#">Sub service 1</a></li>
+                                                                <li><a href="#">Sub service 1</a></li>
+                                                                <li>
+                                                                    <a href="#">Sub service 1</a>
+                                                                    <!-- <ul>
+                                                                        <li><a href="#">Sub Section 1</a></li>
+                                                                        <li><a href="#">Sub Section 2</a></li>
+                                                                        <li><a href="#">Sub Section 3</a></li>
+                                                                    </ul> -->
+                                                                </li>
+                                                                <li><a href="#">Blog Sub 5</a></li>
+                                                            </ul>
+                                                        </li>
+                                                        <li><a href="#">Service 3</a></li>
+                                                        <li><a href="#">Service 4</a></li>
+                                                        <li><a href="#">Service 5</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li><a href="#">Psycologists</a></li>
+                                                <li><a href="#">Tests</a></li>
+                                                <li><a href="#">Contact</a></li>
+                                            </ul>
+                    
+                                            <a href="#" class="menu-icon visible-sm visible-xs pull-right"><i class="fa fa-bars"></i></a>
+                                        </nav><!-- .navigation -->
+                            
+                                    </div>
+                                </div>
+                                <!-- main navigation ends -->
+                            </div>
+                        </div>
+                        <!-- Menu and CTA Ends -->
+
+                    </div>
+                </div>
+            </div>
+            <!-- Bottom Header Ends -->
+
 
         </header>
         <!-- Header Section Ends -->
