arcbd.org #004 | Hero Section Added
Added the hero section

--- a/index.html
+++ b/index.html
@@ -179,6 +179,32 @@
         </header>
         <!-- Header Section Ends -->
 
+
+        <!-- Hero Section -->
+        <section class="hero-section">
+            <div class="container">
+                <div class="row">
+                    <!-- Make the content vertically middle -->
+                    <div class="display-table">
+                        <div class="display-table-cell">
+                            <!-- Hero Text -->
+                            <div class="col-md-5 col-sm-5">
+                                <div class="hero-text">
+                                    <h2>Counceling Families for Happy Living</h2>
+                                    <p>Lorem ipsum dolor sit amet, consectetur incididunt ut labore et dolore magna aliqua.</p>
+                                    <a href="#" class="btn btn-common btn-orange">Book Appoitment</a>
+                                    <a href="#" class="btn btn-common btn-green">Ask a professional</a>
+                                </div>
+                            </div>
+                            <!-- Hero Text Ends -->
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
+        <!-- Hero Section ends -->
+
         
 
 
