--- a/index.html
+++ b/index.html
@@ -205,6 +205,47 @@
         </section>
         <!-- Hero Section ends -->
 
+        <!-- About us section -->
+        <section class="about-us-section section-padding">
+            <div class="container">
+                <div class="row">
+                    <!-- Single about widget -->
+                    <div class="col-md-4 col-sm-4">
+                        <div class="single-about-widget text-center">
+                            <img src="https://picsum.photos/g/360/500?random" class="img-responsive" alt="">
+                            <h3>Happiness & Positive Thoughts</h3>
+                        </div>
+                    </div>
+                    <!-- Single about widget ends -->
+                    <!-- Single about widget -->
+                    <div class="col-md-4 col-sm-4">
+                        <div class="single-about-widget text-center">
+                            <img src="assets/images/about-logo.png" class="img-responsive center-block" alt="">
+                            <h2>Highly Professional Psycologists</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <a href="#" class="btn btn-common btn-orange">Book appoitment</a>
+                        </div>
+                    </div>
+                    <!-- Single about widget ends -->
+                    <!-- Single about widget -->
+                    <div class="col-md-4 col-sm-4">
+                        <div class="single-about-widget text-center">
+                            <div>
+                                <img src="https://picsum.photos/g/360/226?random" class="img-responsive" alt="">
+                                <h3>Drepression Relief</h3>
+                            </div>
+                            <div>
+                                <img src="https://picsum.photos/g/360/226?random" class="img-responsive" alt="">
+                                <h3>Emotional Intelligence</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Single about widget ends -->
+                </div>
+            </div>
+        </section>
+        <!-- About us section ends -->
+
         
 
 
