arcbd.org #006 | Counceling section added
Added counceling section

--- a/index.html
+++ b/index.html
@@ -246,6 +246,62 @@
         </section>
         <!-- About us section ends -->
 
+        <!-- Counceling section -->
+        <section class="counceling-section section-padding section-dark">
+            <div class="container">
+                <!-- section title -->
+                <div class="row">
+                    <div class="col-md-12 section-title">
+                        <h2>WE CAN COUNCELING</h2>
+                    </div>
+                </div>
+                <!-- section title ends -->
+                <div class="row mt-50">
+                    <!-- single counceling widget -->
+                    <div class="col-md-3 col-sm-3">
+                        <div class="single-cn-widget">
+                            <img src="https://picsum.photos/g/263/300?random" class="img-responsive" alt="">
+                            <div>
+                                <h2>For men</h2>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- single counceling widget ends -->
+                    <!-- single counceling widget -->
+                    <div class="col-md-3 col-sm-3">
+                        <div class="single-cn-widget">
+                            <img src="https://picsum.photos/g/263/300?random" class="img-responsive" alt="">
+                            <div>
+                                <h2>For women</h2>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- single counceling widget ends -->
+                    <!-- single counceling widget -->
+                    <div class="col-md-3 col-sm-3">
+                        <div class="single-cn-widget">
+                            <img src="https://picsum.photos/g/263/300?random" class="img-responsive" alt="">
+                            <div>
+                                <h2>children</h2>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- single counceling widget ends -->
+                    <!-- single counceling widget -->
+                    <div class="col-md-3 col-sm-3">
+                        <div class="single-cn-widget">
+                            <img src="https://picsum.photos/g/263/300?random" class="img-responsive" alt="">
+                            <div>
+                                <h2>couple</h2>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- single counceling widget ends -->
+                    
+                </div>
+            </div>
+        </section>
+        <!-- Counceling section ends -->
         
 
 
