arcbd.org #008 | Skill section added
Skill section added.

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <!-- Hero Section -->
         <section class="hero-section">
             <!-- sinlge slider -->
-            <div class="single-slider" style="background-image: url(https://picsum.photos/g/1200/600?random);">
+            <div class="single-slider" style="background-image: url(https://picsum.photos/1200/600?random);">
                 <div class="container">
                     <div class="row">
                         <!-- Make the content vertically middle -->
@@ -216,7 +216,7 @@
                     <!-- Single about widget -->
                     <div class="col-md-4 col-sm-4">
                         <div class="single-about-widget text-center">
-                            <img src="https://picsum.photos/g/360/510?random" class="img-responsive" alt="">
+                            <img src="https://picsum.photos/360/510?random" class="img-responsive" alt="">
                             <h3>Happiness & Positive Thoughts</h3>
                         </div>
                     </div>
@@ -235,11 +235,11 @@
                     <div class="col-md-4 col-sm-4">
                         <div class="single-about-widget text-center">
                             <div>
-                                <img src="https://picsum.photos/g/360/226?random" class="img-responsive" alt="">
+                                <img src="https://picsum.photos/360/226?random" class="img-responsive" alt="">
                                 <h3>Drepression Relief</h3>
                             </div>
                             <div>
-                                <img src="https://picsum.photos/g/360/226?random" class="img-responsive" alt="">
+                                <img src="https://picsum.photos/360/226?random" class="img-responsive" alt="">
                                 <h3>Emotional Intelligence</h3>
                             </div>
                         </div>
@@ -433,7 +433,7 @@
                     <!-- single counceling widget -->
                     <div class="col-md-3 col-sm-3">
                         <div class="single-cn-widget">
-                            <img src="https://picsum.photos/g/263/300?random" class="img-responsive" alt="">
+                            <img src="https://picsum.photos/263/300?random" class="img-responsive" alt="">
                             <div>
                                 <a href="#"><h2>For men</h2></a>
                             </div>
@@ -443,7 +443,7 @@
                     <!-- single counceling widget -->
                     <div class="col-md-3 col-sm-3">
                         <div class="single-cn-widget">
-                            <img src="https://picsum.photos/g/263/300?random" class="img-responsive" alt="">
+                            <img src="https://picsum.photos/263/300?random" class="img-responsive" alt="">
                             <div>
                                     <a href="#"><h2>For Women</h2></a>
                             </div>
@@ -453,7 +453,7 @@
                     <!-- single counceling widget -->
                     <div class="col-md-3 col-sm-3">
                         <div class="single-cn-widget">
-                            <img src="https://picsum.photos/g/263/300?random" class="img-responsive" alt="">
+                            <img src="https://picsum.photos/263/300?random" class="img-responsive" alt="">
                             <div>
                                     <a href="#"><h2>Children</h2></a>
                             </div>
@@ -463,7 +463,7 @@
                     <!-- single counceling widget -->
                     <div class="col-md-3 col-sm-3">
                         <div class="single-cn-widget">
-                            <img src="https://picsum.photos/g/263/300?random" class="img-responsive" alt="">
+                            <img src="https://picsum.photos/263/300?random" class="img-responsive" alt="">
                             <div>
                                     <a href="#"><h2>couple</h2></a>
                             </div>
@@ -475,6 +475,88 @@
             </div>
         </section>
         <!-- Counceling section ends -->
+
+        <!-- Skill section -->
+        <section class="skill-section section-padding">
+            <div class="container">
+                <!-- section title -->
+                <div class="row">
+                    <div class="col-md-12 section-title">
+                        <h2>EXPERIENCED PSYCHIATRIST</h2>
+                    </div>
+                </div>
+                <!-- section title ends -->
+                <div class="row mt-50">
+                    <!-- Single skill widget -->
+                    <div class="col-md-4 col-sm-4">
+                        <div class="single-skill skill-about">
+                            <h4>Psychiatrist Name</h4>
+                            <span>Psychologist - Therapist</span>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <div class="contact-info">
+                                <p><span>Call at: </span>+8801612121212</p>
+                                <p><span>Timing: </span>Mon - Sat, 8am - 0pm</p>
+                                <p><span>Email: </span>example@arcbd.com</p>
+                            </div>
+                            <a href="#" class="btn btn-common btn-orange mt-30">Book appoitment</a>
+                        </div>
+                    </div>
+                    <!-- Single skill widget ends -->
+
+                    <!-- Single skill widget -->
+                    <div class="col-md-4 col-sm-4">
+                        <div class="single-skill skill-image">
+                            <img src="https://picsum.photos/360/510?random" class="img-responsive" alt="">
+                        </div>
+                    </div>
+                    <!-- Single skill widget ends -->
+
+                    <!-- Single skill widget -->
+                    <div class="col-md-4 col-sm-4">
+                        <div class="single-skill skill-info text-right">
+                            <h4>Education & Practices</h4>
+                            <span class="year">2001 to 2005</span>
+                            <h5>Dhaka University</h5>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+                            <!-- Skill set -->
+                            <div class="skill-set">
+                                    <ul class="edu-exp-prograss">
+                                        <li>
+                                            <h5>Anxiety</h5>
+                                            <div class="progress">
+                                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"> <span> 80% </span></div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <h5>Depression</h5>
+                                            <div class="progress">
+                                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"> <span> 90% </span></div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <h5>Substance Abuse</h5>
+                                            <div class="progress">
+                                                <div class="progress-bar" role="progressbar" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100" style="width: 78%;"> <span> 78% </span></div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <h5>Parenting Issues</h5>
+                                            <div class="progress">
+                                                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"> <span> 85% </span></div>
+                                            </div>
+                                        </li>
+                                    </ul>
+                            </div>
+                            <!-- Skill set ends -->
+                        </div>
+                    </div>
+                    <!-- Single skill widget ends -->
+
+                </div>
+            </div>
+        </section>
+        <!-- Skill section ends -->
         
 
 
