arcbd.org #009 | Footer section added
Footer section added

--- a/index.html
+++ b/index.html
@@ -680,6 +680,87 @@
             </div>
         </section>
         <!-- Recent post section ends -->
+
+        <!-- Footer Section -->
+        <footer class="footer-section">
+            <!-- footer top -->
+            <div class="footer-top section-padding">
+                <div class="container">
+                    <div class="row">
+                        <!-- single footer widget -->
+                        <div class="col-md-3 col-sm-3">
+                            <div class="single-footer-widget contact-widget">
+                                <h2>Contact</h2>
+                                <p><span>Phone: </span>+8801612121212</p>
+                                <p><span>Email: </span>contact@arcbd.org</p>
+                                <p>House 27, Road 4/A, Sector 5, Uttara, Dhaka, Bangladesh</p>
+                            </div>
+                        </div>
+                        <!-- single footer widget ends -->
+
+                        <!-- single footer widget -->
+                        <div class="col-md-3 col-sm-3">
+                            <div class="single-footer-widget links-widget">
+                                <h2>Site links</h2>
+                                <ul>
+                                    <li><a href="#">Home</a></li>
+                                    <li><a href="#">About</a></li>
+                                    <li><a href="#">Services</a></li>
+                                    <li><a href="#">Phsycotherapists</a></li>
+                                    <li><a href="#">Test</a></li>
+                                    <li><a href="#">Blog</a></li>
+                                    <li><a href="#">Contact</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- single footer widget ends -->
+
+                        <!-- single footer widget -->
+                        <div class="col-md-3 col-sm-3">
+                            <div class="single-footer-widget links-widget">
+                                <h2>Services</h2>
+                                <ul>
+                                    <li><a href="#">Service 1</a></li>
+                                    <li><a href="#">Service 2</a></li>
+                                    <li><a href="#">Service 3</a></li>
+                                    <li><a href="#">Service 4</a></li>
+                                    <li><a href="#">Servuce 5</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- single footer widget ends -->
+
+                        <!-- single footer widget -->
+                        <div class="col-md-3 col-sm-3">
+                            <div class="single-footer-widget social-widget">
+                                <h2>Social links</h2>
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-twitter"></i></a>
+                                <a href="#"><i class="fa fa-google-plus"></i></a>
+                                <a href="#"><i class="fa fa-instagram"></i></a>
+                                <a href="#"><i class="fa fa-youtube"></i></a>
+                            </div>
+                        </div>
+                        <!-- single footer widget ends -->
+                    </div>
+                </div>
+
+            </div>
+            <!-- footer top ends -->
+
+            <!-- footer bottom -->
+            <div class="footer-bottom">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12 col-xs-12 text-center">
+                            <p>Arcbd.com 2017, All Rights Reserved</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- footer bottom ends -->
+        </footer>
+        <!-- Footer Section ends -->
         
 
 
