arcbd.org #012 | responsive mobile
Responsive for mobile is done

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                             <!-- Social Icons Ends -->
 
                             <!-- topbar links -->
-                            <div class="col-md-5 col-sm-6 col-md-offset-4 col-sm-offset-1">
-                                <div class="topbar-links">
+                            <div class="col-md-5 col-sm-6 col-md-offset-4 col-sm-offset-1 clearfix">
+                                <div class="topbar-links clearfix">
                                     <ul>
                                         <li><a href="#">Login</a> | </li>
                                         <li><a href="#">register</a> | </li>
